--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
+    "deploy": "ng build --prod && node ./service-helpers/uploader.js",
+    "redeploy": "node ./service-helpers/uploader.js",
+    "setup": "node ./service-helpers/setup.js",
+    "start": "node ./service-helpers/init.js && ng serve --proxy-config=proxy.conf.json",
     "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.0",
+    "@angular/cdk": "~8.1.3",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@swimlane/ngx-datatable": "^15.0.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.2.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
